# nono

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.test  Makefile  NOGENT.md  README.md  RELEASING.md  cliff.toml  demo.yml  eti-feature-slides.html  mkdocs.yml  test.json
.cargo/: audit.toml
.github/workflows/: attest-release.yml  ci.yml  docs-dispatch.yml  image-build.yml  nix-integration.yml  phase-37-linux-resl.yml  project-automation.yml  release.yml  sign-instruction-files.yml  spire.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.3-MILESTONE-AUDIT.md
.planning/architecture/: v2.6-upstream-merge-deferral-ADR.md
.planning/milestones/: v2.4-MILESTONE-AUDIT.md  v2.4-MILESTONE-CONTEXT.md  v2.4-REQUIREMENTS.md  v2.4-ROADMAP.md
design/: DESIGN-rollback-preflight.md
docs/: docs.json  home.mdx  index.md  installation.md  troubleshooting.md
local-profiles/: eti-aws-credentials-no-curl.json  eti-gh-capture.json  eti-gh-respond.json  eti-shell-git-ssh-demo.json  kube.json
profiles/: claude-code-autoresearch.json  npm-install.json
scripts/: build-windows-msi.ps1  eti-composable-witness.sh  launch-chromium.mjs  sign-windows-artifacts.ps1  test-iokit-step0.sh  test-linux-container.sh  validate-windows-msi-contract.ps1  verify-trust-root-cached.ps1  windows-test-harness.ps1
src/: capability.rs  cli.rs  exec_strategy.rs  learn.rs  main.rs  output.rs  setup.rs
tests/: run_integration_tests.sh
tools/sign-fixture/: Cargo.toml
tools/sign-fixture/src/: main.rs
(+508 files in other folders)
